--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.appupgrade-dev:app-upgrade-android-sdk:1.0.2'
+    implementation 'com.github.appupgrade-dev:app-upgrade-android-sdk:71a3c396e4'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
